@@ -1687,6 +1687,21 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon PIXMA MP700/730 --- split from iP3000 driver, with modifications */
+    /* US model: control_cmd_iP2700 */
+    /* Japanese model: control_BJC_i550, so chose this as base (more commands) */
+    "PIXMA MP700", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_MULTIPASS_MP900_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_I,0,control_cmd_BJC_i550,  /*features */
+    &canon_MULTIPASS_MP700_modelist,
+    &canon_MULTIPASS_MP700_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
   { /* Canon PIXMA MP900 */
     "PIXMA MP900", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
